# video-grid

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.h  videodecoder.cpp
header files/: audioplayer.h  videodecoder.h  videowidget.h
source files/: mainwindow.cpp  videowidget.cpp
